Added Pages and routed, added content to home page and setup news and weather API and added content to each

--- a/G00373320/src/app/folder/folder.page.html
+++ b/G00373320/src/app/folder/folder.page.html
@@ -13,6 +13,28 @@
       <ion-title size="large">{{ folder }}</ion-title>
     </ion-toolbar>
   </ion-header>
+  
+<h1>About Galway</h1>
+<p>Galway is a city in County Galway in the West of Ireland, in the province of Connacht. It lies on the River Corrib between Lough Corrib and Galway Bay, and is the sixth most populous city in Ireland, with a population at the 2016 Census of 79,934.
+  Galway is renowned for its vibrant lifestyle and for hosting numerous festivals, celebrations and events such as The Galway Arts Festival. The city is currently the European Capital of Culture for 2020, alongside Rijeka, Croatia.
+</p>
+
+<h2>Galways Name</h2>
+<p>The city's name comes from the Irish name Gaillimhe, which formed the western boundary of the earliest settlement, Dún Gaillimhe "Fort Gaillimh". Historically, the name was Anglicised as Galliv or Gallive, closer to the Irish pronunciation. The city's name in Latin is Galvia. Residents of the city are referred to as Galwegians.
+  The city also bears the nickname "City of the Tribes" because of the fourteen merchant families called the "tribes of Galway" who led the city in its Hiberno-Norman period.
+</p>
+
+<h2>History of Galway</h2>
+<p>Dún Gaillimhe was constructed in 1124, by the King of Connacht. A settlement grew around it. During the Norman invasion of Connacht in the 1230s, Dún Gaillimhe was captured by Richard Mor de Burgh, who had led the invasion. As the de Burghs eventually became Gaelicised, the merchants of the town, the Tribes of Galway, pushed for greater control over the walled city.
+</p>
+
+<p>This led to their gaining complete control over the city and to the granting of mayoral status by the English crown in December 1484. Galway endured difficult relations with its Irish neighbours. A notice over the west gate of the city, completed in 1562 by Mayor Thomas Óge Martyn, stated "From the Ferocious O'Flahertys may God protect us". A by-law forbade the native Irish (as opposed to Galway's Hiberno-Norman citizens) unrestricted access into Galway, saying "neither O’ nor Mac shall strutte nor swagger through the streets of Galway" without permission.</p>
+
+<p>During the Middle Ages, Galway was ruled by an oligarchy of fourteen merchant families (twelve who claimed to be of Norman origin and two of Irish origin). These were the "Tribes of Galway". The city thrived on international trade, and in the Middle Ages, it was the principal Irish port for trade with Spain and France. The most famous reminder of those days is ceann an bhalla ("the end of the wall"), now known as the Spanish Arch, constructed during the mayoralty of Wylliam Martin (1519–20). In 1477 Christopher Columbus visited Galway, possibly stopping off on a voyage to Iceland or the Faroe Islands.</p>
+
+<p>During the 16th and 17th centuries Galway remained loyal to the English crown for the most part, even during the Gaelic resurgence, perhaps for reasons of survival. However, by 1642 the city had allied itself with the Catholic Confederation of Kilkenny during the Wars of the Three Kingdoms. During the resulting Cromwellian conquest of Ireland, Cromwellian forces captured the city after a nine-month siege. At the end of the 17th century the city supported the Jacobites in the Williamite war in Ireland and was captured by the Williamites after a very short siege not long after the Battle of Aughrim in 1691. The great families of Galway were ruined. The city suffered further under the potato famines of 1845–1852, and it did not fully recover until the period of strong economic growth of the late 20th century.</p>
+
+
+
+
 </ion-content>
-  
-  
