--- a/G00373320/src/global.scss
+++ b/G00373320/src/global.scss
@@ -31,10 +31,23 @@ ion-menu {
   --ion-text-color: var(--ion-color-primary-contrast);
 
   ion-toolbar {
-    --background: var(--ion-color-dark);
+    --background: var(--ion-color-primary);
   }
 
   ion-list {/* optional, but it needs when you use gradient as a background color.*/
     background: transparent;
   }
 }
+
+ion-card {
+  --background: var(--ion-color-primary);
+  color: #ffff;
+  font-size: medium;
+}
+
+ion-card-header {
+  color: #ffff;
+  font-size: medium;
+}
+
+
