--- a/G00373320/src/app/weather/weather.page.html
+++ b/G00373320/src/app/weather/weather.page.html
@@ -21,7 +21,7 @@
      The current weather is: {{weather.main}}
       </ion-card-header>
       <ion-card-content>
-        <p>
+        <p><!--Reads in data from api and loads with weather.description-->
          Weather description: {{weather.description}}
         </p>          
       </ion-card-content>
